// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TourInvitationCard /> fetchInvitation() should call dispatchTo with status = COMPLETED 1`] = `
Array [
  Array [
    "Users",
    "getInvitations",
    Object {
      "onError": [Function],
      "onSuccess": [Function],
      "payload": Object {
        "myUserId": 999,
        "status": "pending",
      },
    },
  ],
  Array [
    "Users",
    "getInvitations",
    Object {
      "onError": [Function],
      "onSuccess": [Function],
      "payload": Object {
        "myUserId": 999,
        "status": "completed",
      },
    },
  ],
]
`;

exports[`<TourInvitationCard /> fetchInvitation() should call dispatchTo with status = PENDING 1`] = `
Array [
  Array [
    "Users",
    "getInvitations",
    Object {
      "onError": [Function],
      "onSuccess": [Function],
      "payload": Object {
        "myUserId": 999,
        "status": "pending",
      },
    },
  ],
  Array [
    "Users",
    "getInvitations",
    Object {
      "onError": [Function],
      "onSuccess": [Function],
      "payload": Object {
        "myUserId": 999,
        "status": "pending",
      },
    },
  ],
]
`;

exports[`<TourInvitationCard /> render() should render children 1`] = `
<div>
  children
</div>
`;

exports[`<TourInvitationCard /> render() should render correctly 1`] = `
<div>
  <div
    className=""
  >
    <WithStyles(GridContainer)
      direction="column"
      spacing={0}
    >
      <WithStyles(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(Header)))))
        isLoading={false}
        onClose={[Function]}
        type="shares"
        viewStore="someStore"
      />
      <WithStyles(ForwardRef(Collapse))
        in={true}
        transitionduration="auto"
        unmountOnExit={true}
      >
        <WithStyles(GridItem)
          className=""
        >
          <div
            className=""
          >
            <WithStyles(Connect(WithSimplifyResaga(Content)))
              userId={999}
              viewStore="someStore"
            />
          </div>
        </WithStyles(GridItem)>
        <WithStyles(Connect(WithSimplifyResaga(Footer)))
          type="shares"
          viewStore="someStore"
        />
      </WithStyles(ForwardRef(Collapse))>
    </WithStyles(GridContainer)>
  </div>
</div>
`;

exports[`<TourInvitationCard /> renderProp() should renderProp 1`] = `
<div>
  <WithStyles(GridItem)
    className=""
  >
    renderProp
  </WithStyles(GridItem)>
</div>
`;
